--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^18.2.74",
     "@types/react-dom": "^18.2.23",
     "babel-loader": "^9.1.3",
+    "babel-plugin-inline-react-svg": "^2.0.2",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
