--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "rc-util": "^5.39.1"
   }
 }
