--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/react-dom": "^18.2.23",
     "babel-loader": "^9.1.3",
     "babel-plugin-inline-react-svg": "^2.0.2",
-    "classnames": "^2.5.1",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "react": "^18.2.0",
@@ -30,5 +29,8 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "classnames": "^2.5.1"
   }
 }
